Add distinct product retrieval, enhance CORS support, and refactor tests
Implemented `getDistinctProductsByName` in `ProductService` and added the corresponding controller endpoint. Enhanced CORS configuration for improved test flexibility. Refactored test cases to align with updated application configurations and improved assertion consistency. Updated `Home` to handle product errors and modified `ProductImage` for dynamic URL adjustments.